--- a/templates/base.html
+++ b/templates/base.html
@@ -1,52 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title%}{%endblock %}</title>
-    <script
-      type="text/javascript"
-      src="{{url_for('static', filename='javascript/main.js')}}"
-    ></script>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{url_for('static',filename='css/main.css')}}"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{url_for('static',filename='font-awesome/css/all.css')}}"
-    />
 
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="{{url_for('static',filename='images/fav/apple-touch-icon.png')}}"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="{{url_for('static',filename='images/fav/favicon-32x32.png')}}"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="{{url_for('static',filename='images/fav/favicon-16x16.png')}}"
-    />
-    <link
-      rel="manifest"
-      href="{{url_for('static',filename='images/fav/site.webmanifest')}}"
-    />
-  </head>
-  <body>
-    <div class="card">
-      <section name="head">
-        {% block heading%}{% endblock %} {% block menue %}{% endblock %}
-      </section>
-      {% block add %}{% endblock %} {% block list %} {% endblock %}
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{% block title%}{%endblock %}</title>
+  <script type="text/javascript" src="{{url_for('static', filename='javascript/main.js')}}"></script>
+  <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/main.css')}}" />
+  <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='font-awesome/css/all.css')}}" />
+
+  <link rel="apple-touch-icon" sizes="180x180"
+    href="{{url_for('static',filename='images/fav/apple-touch-icon.png')}}" />
+  <link rel="icon" type="image/png" sizes="32x32"
+    href="{{url_for('static',filename='images/fav/favicon-32x32.png')}}" />
+  <link rel="icon" type="image/png" sizes="16x16"
+    href="{{url_for('static',filename='images/fav/favicon-16x16.png')}}" />
+  <link rel="manifest" href="{{url_for('static',filename='images/fav/site.webmanifest')}}" />
+</head>
+
+<body>
+  <div class="card">
+    <section name="head">
+
+      {% block heading%}{% endblock %}
+      {% block menue %}{% endblock %}
+    </section>
+    <section name="list">{% block add %}{% endblock %} {% block list %} {% endblock %}</section>
+
+  </div>
+</body>
+
 </html>
