--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,7 @@
         <input name="password" id="password" type="password" required>
         <input type="submit" value="Login" class="btn-2" />
     </form>
+    <p class="error-msg">{{message}}</p>
     <a class="center" href="/signup">Don't have an account yet!></a>
 </section>
 {% endblock %}
