--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,6 +17,7 @@
         <input name="password" id="password" type="password" required>
         <input type="submit" value="Create an account" class="btn-2" />
     </form>
+    <p class="error-msg">{{message}}</p>
     <a class="center" href="/login">Alreday have an account></a>
 </section>
 {% endblock %}
